crates/tinc/build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__exists__tests__exists_runtime_repeated.snap
---
source: crates/tinc/build/src/codegen/cel/functions/exists.rs
expression: "postcompile::compile_str!(postcompile::config!\n{\n    test: true, dependencies:\n    vec![postcompile::Dependency::version(\"tinc\", \"*\"),],\n}, quote!\n{\n    fn exists(input: &Vec<String>) -> Result<bool,\n    ::tinc::__private::cel::CelError<'_>> { Ok(#output) } #[test] fn\n    test_exists()\n    {\n        assert_eq!(exists(&vec![\"value\".into()]).unwrap(), true);\n        assert_eq!(exists(&vec![\"not_value\".into()]).unwrap(), false);\n        assert_eq!(exists(&vec![\"xd\".into(), \"value\".into()]).unwrap(), true);\n        assert_eq!(exists(&vec![\"xd\".into(), \"value\".into(),\n        \"value\".into()]).unwrap(), true);\n    }\n},)"
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in [ELAPSED]s
--- expanded
#![feature(prelude_import)]
#[macro_use]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
fn exists(input: &Vec<String>) -> Result<bool, ::tinc::__private::cel::CelError<'_>> {
    Ok({
        let mut iter = ((input).iter()).into_iter();
        loop {
            let Some(item) = iter.next() else {
                break false;
            };
            if ::tinc::__private::cel::to_bool(
                ::tinc::__private::cel::CelValue::cel_eq(
                    ::tinc::__private::cel::CelValueConv::conv(item),
                    ::tinc::__private::cel::CelValue::String(
                        ::tinc::__private::cel::CelString::Borrowed("value"),
                    ),
                )?,
            ) {
                break true;
            }
        }
    })
}
